@@ -1,5 +1,6 @@
 ChangeLog
 
+* Return-Path should be set to Sender when set
 * Adds Q or B encoding to headers when necessary
 * quoted-encoding should now encode NULs \000
 * Fixed encoding of body/AltBody (#553370)
